<resources>
    <string name="app_name">ÉTS Mobile</string>
    <string name="gridview_item_image">Image d\'un item de gridview</string>
    <string name="main_home_header">Header de l\'écran d\'accueil</string>
    <string name="news_list_view_btnSources">Sources</string>
    <string name="news_list_view_image">Image qui représente la nouvelle</string>
    <string name="news_list_view_btnHome">Accueil</string>
    <string name="pref_signets_label">Signets</string>
    <string name="pref_code_universel">Code Universel</string>
    <string name="pref_mot_passe_lbl">Mot de passe</string>
    <string name="info_ets_title">L’ÉTS, le génie avec un +</string>
    <string name="info_ets_text">L’École de technologie supérieure est une
		constituante du réseau de l’Université du Québec. Spécialisée dans
		l’enseignement et la recherche appliqués en génie et le transfert
		technologique, elle forme des ingénieurs et des chercheurs reconnus
		pour leur approche pratique et innovatrice. Depuis sa création, elle
		entretient un partenariat unique avec le milieu des affaires et
		l’industrie, tant avec les grandes entreprises que les PME.</string>
    <string name="info_ets_address">Adresses :
		Pavillon principal (A) : HEAD
		1100, rue
		Notre-Dame Ouest (angle Peel au sud)
		Montréal (Qc) H3C 1K3
		Téléphone:
		514 396-8800</string>
    <string name="apphence_key">8d31bdcc179d40b0af806d41a32010ef7f3f0d38</string>
    <string name="info_applets_title">Applets, Ingénierie mobile</string>
    <string name="info_applets_text">Good news! After more than a year of work and
		planning, the club Applets is now officially recognized by the ÉTS as
		of january 2011! We have a lot of great projects to come and we
		encourage you to stay aware and to come back often on our website to
		be aware of them.</string>
    <string name="student_profile_name">Prénom</string>
    <string name="student_profile_lastname">Nom</string>
    <string name="student_profile_solde">Solde</string>
    <string name="student_profile_codePermanent">Code permanent</string>
    <string name="loading">Chargement…</string>
    <string name="bottin_init_alert"> Attention, votre bottin est vide, le téléchargement peux prendre quelques minutes, voulez-vous continuer ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="login">Login</string>
    <string name="login_dialog_title">Informations personelle</string>
    <string name="login_dialog_code_perm">Code Permanent</string>
    <string name="login_dialog_code_uni">Code Universel</string>
    <string name="logout">Logout</string>
    <string name="viewholderidtag">ID_TAG</string>
    <string name="viewholdercontenttag">Content_TAG</string>
    <string name="usernamePasswordRequired">Vous devez vous enregistrer sous la section Profil.</string>
    <string name="mesCours">Mes cours</string>
    <string name="sommaire">Sommaire</string>
    <string name="mesNotes">Mes notes</string>
    <string name="cote">Cote</string>
    <string name="noteACejour">Note à ce jour</string>
    <string name="moyenne">Moyenne de la classe</string>
    <string name="ecartType">Écart-type</string>
    <string name="mediane">Médiane</string>
    <string name="rangCentille">Rang centille</string>
    <string name="nodata">Aucune donnée.</string>
    <string name="about_team_android"><b>Réalisation - Équipe Android</b>\n Philippe David\nRodrigo Manyari\nVincent Séguin\nMicheal Bernier</string>
    <string name="about_team_ti_ets"><b>Intégration avec les Systèmes d’entreprise (TI - ÉTS)</b>\nRobert Gervais\nOlivier Lacasse</string>
    <string name="about_team_applets"><b>Responsables du club</b>\nAntoine Lamy (Capitaine)\nPhilippe David (Second)\nDanny Tran (Communications)\nJean-François Patenaude (Processus)</string>
    <string name="about_partenaires"><b>Partenaires 2012–2013</b></string>
    <string name="about_particuliers"><b>Remerciements Particuliers</b>\nFrançois Coallier (DDTSA)\nIdrissa Konkobo (Systèmes d\'entreprise)\nObed José (Icônes)\nBruno Côté (Sécurité)\nCarl-Olivier Perras-Beaulieu (Communications)</string>
    <string name="secu_title1">Joindre la sécurité</string>
    <string name="secu_phone_lbl">541–396–8900</string>
    <string name="secu_title2">Procédures d\'urgence</string>
    <string name="secu_appel_lbl">Appel d\'urgence</string>
    <string name="secu_ext_lbl">À l\'interne</string>
    <string name="secu_ext">Poste 55</string>
    <string-array name="secu_urgence">
        <item>Appel à la bombe</item>
        <item>Colis suspect</item>
        <item>Incendie</item>
        <item>Odeur suspecte</item>
        <item>Panne d\'ascenseur</item>
        <item>Panne électrique</item>
        <item>Personne armée</item>
        <item>Urgence médicale</item>
    </string-array>
    <string name="urgence_resum_bombe">&lt;ul&gt;&lt;li&gt;Ne pas mettre fin &amp;#224; la com&amp;shy;mu&amp;shy;ni&amp;shy;ca&amp;shy;tion t&amp;#233;&amp;shy;l&amp;#233;&amp;shy;pho&amp;shy;nique&lt;/li&gt;&lt;li&gt;Ten&amp;shy;ter d’ob&amp;shy;te&amp;shy;nir le maxi&amp;shy;mum d’in&amp;shy;for&amp;shy;ma&amp;shy;tions &lt;/li&gt;&lt;li&gt;Faire r&amp;#233;&amp;shy;p&amp;#233;&amp;shy;ter ou pr&amp;#233;&amp;shy;tex&amp;shy;ter avoir de la dif&amp;shy;fi&amp;shy;cul&amp;shy;t&amp;#233; &amp;#224; en&amp;shy;tendre afin de ga&amp;shy;gner  du temps.&lt;/li&gt;&lt;li&gt;Dans la me&amp;shy;sure du pos&amp;shy;sible et en fonc&amp;shy;tion de la si&amp;shy;tua&amp;shy;tion, ten&amp;shy;ter d’ob&amp;shy;te&amp;shy;nir les in&amp;shy;for&amp;shy;ma&amp;shy;tions sui&amp;shy;vantes : &lt;/li&gt;&lt;ul&gt;&lt;li&gt;L’heure &amp;#224; la&amp;shy;quelle la bombe ex&amp;shy;plo&amp;shy;se&amp;shy;ra &lt;/li&gt;&lt;li&gt;Le type de bombe&lt;/li&gt;&lt;li&gt;Les per&amp;shy;sonnes vi&amp;shy;s&amp;#233;es et le mo&amp;shy;tif&lt;/li&gt;&lt;li&gt;L’em&amp;shy;pla&amp;shy;ce&amp;shy;ment de la bombe &lt;/li&gt;&lt;li&gt;Son nom et adresse &lt;/li&gt;&lt;/ul&gt;&lt;li&gt;Lais&amp;shy;ser l’in&amp;shy;ter&amp;shy;lo&amp;shy;cu&amp;shy;teur rac&amp;shy;cro&amp;shy;cher en pre&amp;shy;mier &lt;/li&gt;&lt;li&gt;Il est pri&amp;shy;mor&amp;shy;dial de com&amp;shy;mu&amp;shy;ni&amp;shy;quer IM&amp;shy;M&amp;#201;&amp;shy;DIA&amp;shy;TE&amp;shy;MENT avec la s&amp;#233;&amp;shy;cu&amp;shy;ri&amp;shy;t&amp;#233; au 514-396-8900 &lt;/li&gt;&lt;/ul&gt;</string>
    <string name="urgence_resum_colis">&lt;ul&gt;&lt;li&gt;Ne ja&amp;shy;mais tou&amp;shy;cher, pous&amp;shy;ser, frap&amp;shy;per, sou&amp;shy;le&amp;shy;ver ou ou&amp;shy;vrir un co&amp;shy;lis sus&amp;shy;pect&lt;/li&gt;&lt;li&gt;Ne ja&amp;shy;mais prendre pour ac&amp;shy;quis qu’il s’agit du seul co&amp;shy;lis&lt;/li&gt;
&lt;li&gt;Quit&amp;shy;ter le sec&amp;shy;teur et si pos&amp;shy;sible res&amp;shy;treindre l’ac&amp;shy;c&amp;#232;s en fer&amp;shy;mant les portes&lt;/li&gt;&lt;li&gt;Avi&amp;shy;ser les per&amp;shy;sonnes ren&amp;shy;con&amp;shy;tr&amp;#233;es de ne pas en&amp;shy;trer dans ce sec&amp;shy;teur&lt;/li&gt;&lt;li&gt;Une fois &amp;#224; l’ex&amp;shy;t&amp;#233;&amp;shy;rieur du sec&amp;shy;teur, com&amp;shy;mu&amp;shy;ni&amp;shy;quer avec la s&amp;#233;&amp;shy;cu&amp;shy;ri&amp;shy;t&amp;#233; 514-396- 8900&lt;/li&gt;&lt;li&gt;Ne ja&amp;shy;mais ac&amp;shy;ti&amp;shy;ver une sta&amp;shy;tion ma&amp;shy;nuelle d’in&amp;shy;cen&amp;shy;die (sta&amp;shy;tion rouge)&lt;/li&gt;&lt;/ul&gt;</string>
    <string name="urgence_resum_feu">&lt;p&gt;Si vous d&amp;#233;&amp;shy;cou&amp;shy;vrez un foyer d’in&amp;shy;cen&amp;shy;die :&lt;/p&gt;&lt;ul&gt;&lt;li&gt;Quit&amp;shy;tez les lieux im&amp;shy;m&amp;#233;&amp;shy;dia&amp;shy;te&amp;shy;ment et ai&amp;shy;dez &amp;#224; &amp;#233;va&amp;shy;cuer qui&amp;shy;conque se trou&amp;shy;vant en dan&amp;shy;ger im&amp;shy;m&amp;#233;&amp;shy;diat sans mettre votre vie en dan&amp;shy;ger.&lt;/li&gt;&lt;li&gt;D&amp;#233;&amp;shy;clen&amp;shy;chez l’alarme in&amp;shy;cen&amp;shy;die en ti&amp;shy;rant un poste ma&amp;shy;nuel d’in&amp;shy;cen&amp;shy;die si&amp;shy;tu&amp;#233; pr&amp;#232;s des is&amp;shy;sues de se&amp;shy;cours.&lt;/li&gt;&lt;li&gt;Uti&amp;shy;li&amp;shy;sez les es&amp;shy;ca&amp;shy;liers pour sor&amp;shy;tir du b&amp;#226;&amp;shy;ti&amp;shy;ment.&lt;/li&gt;&lt;li&gt;Fer&amp;shy;mer toutes les portes der&amp;shy;ri&amp;#232;res vous pour &amp;#233;vi&amp;shy;ter que l’in&amp;shy;cen&amp;shy;die ne se pro&amp;shy;page.&lt;/li&gt;&lt;li&gt;Aler&amp;shy;ter le ser&amp;shy;vice de la pr&amp;#233;&amp;shy;ven&amp;shy;tion des in&amp;shy;cen&amp;shy;dies de Mont&amp;shy;r&amp;#233;al en com&amp;shy;po&amp;shy;sant le &amp;#171;911&amp;#187; d’un en&amp;shy;droit s&amp;#233;&amp;shy;cu&amp;shy;ri&amp;shy;taire.&lt;/li&gt;&lt;/ul&gt;&lt;p&gt;Lorsque re&amp;shy;ten&amp;shy;tit le si&amp;shy;gnal d’alarme du r&amp;#233;&amp;shy;seau aver&amp;shy;tis&amp;shy;seur d’in&amp;shy;cen&amp;shy;die&lt;/p&gt;&lt;ul&gt;&lt;li&gt;Quit&amp;shy;tez votre lo&amp;shy;cal im&amp;shy;m&amp;#233;&amp;shy;dia&amp;shy;te&amp;shy;ment et ai&amp;shy;dez &amp;#224; &amp;#233;va&amp;shy;cuer qui&amp;shy;conque se trouve en dan&amp;shy;ger im&amp;shy;m&amp;#233;&amp;shy;diat sans mettre votre vie en dan&amp;shy;ger.&lt;/li&gt;&lt;li&gt;Uti&amp;shy;li&amp;shy;sez les es&amp;shy;ca&amp;shy;liers pour sor&amp;shy;tir du b&amp;#226;&amp;shy;ti&amp;shy;ment.&lt;/li&gt;&lt;li&gt;Fer&amp;shy;mez toutes les portes der&amp;shy;ri&amp;#232;res vous pour &amp;#233;vi&amp;shy;ter que l’in&amp;shy;cen&amp;shy;die ne se pro&amp;shy;page.&lt;/li&gt;&lt;li&gt;S’&amp;#233;loi&amp;shy;gner des lieux &amp;#224; une dis&amp;shy;tance de cent (100) m&amp;#232;tres afin de per&amp;shy;mettre &amp;#224; ceux qui suivent de sor&amp;shy;tir et de ne pas nuire aux pom&amp;shy;piers dans leur lutte contre l’in&amp;shy;cen&amp;shy;die.&lt;/li&gt;&lt;/ul&gt;</string>
    <string name="urgence_resum_odeur">&lt;p&gt;La d&amp;#233;&amp;shy;cou&amp;shy;verte d’une odeur ou fuite de gaz&lt;/p&gt;&lt;ul&gt;&lt;li&gt;Quit&amp;shy;ter le sec&amp;shy;teur&lt;/li&gt;&lt;li&gt;Com&amp;shy;mu&amp;shy;ni&amp;shy;quer avec la s&amp;#233;&amp;shy;cu&amp;shy;ri&amp;shy;t&amp;#233; au : 514-396-8900&lt;/li&gt;&lt;li&gt;Ne ja&amp;shy;mais ac&amp;shy;ti&amp;shy;ver une sta&amp;shy;tion ma&amp;shy;nuelle d’in&amp;shy;cen&amp;shy;die (sa sta&amp;shy;tion rouge)&lt;/li&gt;&lt;/ul&gt;
&lt;p&gt;L’&amp;#233;va&amp;shy;cua&amp;shy;tion&lt;/p&gt;&lt;ul&gt;&lt;li&gt;De&amp;shy;meu&amp;shy;rer calme&lt;/li&gt;&lt;li&gt;Quit&amp;shy;ter les lieux sans faire de d&amp;#233;&amp;shy;tour pour al&amp;shy;ler &amp;#224; son ca&amp;shy;sier ou ra&amp;shy;mas&amp;shy;ser des ef&amp;shy;fets per&amp;shy;son&amp;shy;nels&lt;/li&gt;&lt;li&gt;&amp;#201;va&amp;shy;cuer l’en&amp;shy;droit par les es&amp;shy;ca&amp;shy;liers de se&amp;shy;cours les plus pr&amp;#232;s et ne pas
uti&amp;shy;li&amp;shy;ser l’as&amp;shy;cen&amp;shy;seur&lt;/li&gt;&lt;li&gt;Ai&amp;shy;der, si n&amp;#233;&amp;shy;ces&amp;shy;saire, les per&amp;shy;sonnes &amp;#224; quit&amp;shy;ter les lieux&lt;/li&gt;&lt;li&gt;S’&amp;#233;loi&amp;shy;gner de l’im&amp;shy;meuble et se rendre au point de ras&amp;shy;sem&amp;shy;ble&amp;shy;ment&lt;/li&gt;&lt;li&gt;Ne ja&amp;shy;mais en&amp;shy;trer ou re&amp;shy;tour&amp;shy;ner dans l’&amp;#233;ta&amp;shy;blis&amp;shy;se&amp;shy;ment pen&amp;shy;dant la si&amp;shy;tua&amp;shy;tion d’ur&amp;shy;gence&lt;/li&gt;&lt;li&gt;At&amp;shy;tendre d’avoir ob&amp;shy;te&amp;shy;nu l’au&amp;shy;to&amp;shy;ri&amp;shy;sa&amp;shy;tion des res&amp;shy;pon&amp;shy;sables des &amp;#233;quipes d’&amp;#233;va&amp;shy;cua&amp;shy;tion avant de quit&amp;shy;ter le point de ras&amp;shy;sem&amp;shy;ble&amp;shy;ment.&lt;/li&gt;&lt;/ul&gt;</string>
</resources>