<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/white">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
    	android:layout_height="match_parent" android:scrollbars="vertical">
    	<TextView android:textAppearance="?android:attr/textAppearanceLarge"
    		android:layout_height="wrap_content" android:layout_width="wrap_content"
    		android:id="@+id/info_ets_title" android:text="@string/info_ets_title"
    		android:paddingBottom="10sp" android:textColor="@color/black"></TextView>
    	<TextView android:layout_height="wrap_content"
    		android:layout_width="wrap_content" android:id="@+id/info_ets_text"
    		android:text="@string/info_ets_text" android:paddingLeft="10sp"
    		android:autoLink="all" android:textColor="@color/black"></TextView>
    	<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
    		android:layout_height="wrap_content" android:text="@string/info_ets_address"
    		android:paddingLeft="10sp" android:paddingTop="5sp" android:textColor="@color/black"></TextView>
    	<TextView android:textAppearance="?android:attr/textAppearanceLarge"
    		android:layout_height="wrap_content" android:layout_width="wrap_content"
    		android:id="@+id/info_applets_title" android:text="@string/info_applets_title"
    		android:paddingBottom="10sp" android:textColor="@color/black"></TextView>
    	<TextView android:layout_height="wrap_content"
    		android:layout_width="wrap_content" android:id="@+id/info_applets_text"
    		android:text="@string/info_applets_text" android:paddingLeft="10sp" android:textColor="@color/black"></TextView>
    </LinearLayout>
</ScrollView>
