<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Club ApplETS
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_nav_bar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navbar_bg"
    android:orientation="horizontal"
    android:padding="5dip" >


    <ImageButton
        android:id="@+id/base_list_home_btn"
        style="@style/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/icon_home" android:contentDescription="@string/app_name"/>


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/news_list_view_image"
        android:paddingLeft="25dip"
        android:paddingRight="13dip"
        android:paddingTop="5dip"
        android:src="@drawable/navbar_news_title" />

    <Button
        android:id="@+id/base_list_source_btn"
        style="@style/etsBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/nav_right_button_selector"
        android:text="@string/news_list_view_btnSources"
        android:visibility="invisible" />

</LinearLayout>
