<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical" >

    <com.etsmt.applets.etsmobile.views.NavBar
        android:id="@+id/navBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.etsmt.applets.etsmobile.views.NavBar>

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:apiKey="@string/map_key"
        android:clickable="true"
        android:minHeight="200dip" >

    </com.google.android.maps.MapView>

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/secu_title1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dip"
            android:background="@drawable/secu_shape"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/secu_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secu_appel_lbl"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:autoLink="phone"
                    android:gravity="right"
                    android:text="@string/secu_phone_lbl"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue_ets" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secu_ext_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secu_ext_lbl"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/secu_ext"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue_ets" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="15dip"
            android:text="@string/secu_title2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView01"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dip"
            android:background="@drawable/secu_shape"
            android:entries="@array/secu_urgence"
            tools:listitem="@layout/simple_list_item_1" >
        </ListView>
    </RelativeLayout>

</LinearLayout>