<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_bar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navbar_bg"
    android:contentDescription="@string/app_name"
    android:orientation="horizontal"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/base_bar_img_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/base_bar_source_btn"
        android:layout_toRightOf="@+id/base_bar_home_btn"
        android:contentDescription="@string/news_list_view_image"
        android:paddingLeft="25dip"
        android:src="@drawable/navbar_news_title"
        android:visibility="invisible" />

    <Button
        android:id="@+id/base_bar_source_btn"
        style="@style/etsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/news_list_view_btnSources" />

    <ImageButton
        android:id="@+id/base_bar_home_btn"
        style="@style/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_home" />

    <ProgressBar
        android:id="@+id/base_bar_loading"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/base_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/base_bar_img_title"
        android:layout_alignRight="@+id/base_bar_source_btn"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>